--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -1,3 +1,4 @@
+script:
 name: Validate Application Pipeline
 
 on:
@@ -15,7 +16,7 @@ on:
         description: "Path to the Dockerfile"
         required: false
         type: string
-        default: "./dockerfile"
+        default: "Dockerfile"
       dockerhub_repo:
         description: "DockerHub repository name"
         required: false
@@ -37,96 +38,63 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: validate
-    strategy:
-      matrix:
-        step: ['checkout', 'docker-login', 'docker-build-push']
 
     steps:
-      # ✅ Checkout Code
-      - name: Checkout Repository
-        if: ${{ matrix.step == 'checkout' }}
+      # Checkout Repository
+      - name: Checkout code
         uses: actions/checkout@v3
         with:
           ref: ${{ inputs.branch }}
           fetch-depth: 0
           submodules: true
 
-      # ✅ Validate Inputs
+      # Validate Inputs Before Proceeding
       - name: Validate Inputs
-        if: ${{ matrix.step == 'checkout' }}
         run: |
-          echo "🚀 Validating inputs..."
-          echo "DockerHub Repo: ${{ inputs.dockerhub_repo }}"
-          echo "Docker Tag: ${{ inputs.docker_tag }}"
-          
-          # Ensure dockerhub_repo is not empty
+          echo "Validating inputs..."
           if [[ -z "${{ inputs.dockerhub_repo }}" ]]; then
-            echo "❌ dockerhub_repo is missing!"
-            exit 1
-          fi
-
-          # Ensure docker_tag is not empty
-          if [[ -z "${{ inputs.docker_tag }}" ]]; then
-            echo "⚠️ docker_tag is empty, using 'latest'."
-            echo "docker_tag=latest" >> $GITHUB_ENV
+            echo "dockerhub_repo is missing! Using default: venkatalakshmi0448/nodejs-docker"
+            dockerhub_repo="venkatalakshmi0448/nodejs-docker"
           else
-            echo "docker_tag=${{ inputs.docker_tag }}" >> $GITHUB_ENV
+            dockerhub_repo="${{ inputs.dockerhub_repo }}"
           fi
+          if [[ -z "${{ inputs.docker_tag }}" ]]; then
+            echo "docker_tag is empty, using 'latest'."
+          fi
+          echo "Inputs validation passed."
 
-          echo "✅ Inputs validation passed."
-
-      # ✅ Validate Secrets
+      # Validate Secrets Before Proceeding
       - name: Validate Secrets
-        if: ${{ matrix.step == 'docker-login' }}
         run: |
-          echo "🔐 Validating secrets..."
+          echo "Validating secrets..."
           if [[ -z "${{ secrets.DOCKERHUB_USERNAME }}" || -z "${{ secrets.DOCKERHUB_PASSWORD }}" ]]; then
-            echo "❌ Required secrets are missing!"
+            echo "Required secrets are missing!"
             exit 1
           fi
-          echo "✅ Secrets validation passed."
+          echo "Secrets validation passed."
 
-      # ✅ Docker Login
+      # Docker Login
       - name: Log in to DockerHub
-        if: ${{ matrix.step == 'docker-login' }}
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      # ✅ Verify Docker Login
+      # Verify Docker Login
       - name: Verify Docker Login
-        if: ${{ matrix.step == 'docker-login' }}'
         run: |
           echo "🔍 Checking Docker login..."
           if ! docker info | grep -q 'Username'; then
-            echo "❌ Docker login failed!"
+            echo "Docker login failed!"
             exit 1
           fi
-          echo "✅ Docker login successful!"
+          echo "Docker login successful!"
 
-      # ✅ Set up Docker Buildx
+      # Set up Buildx
       - name: Set up Docker Buildx
-        if: ${{ matrix.step == 'docker-build-push' }}
         uses: docker/setup-buildx-action@v2
 
-      # ✅ Debug Docker Image Tags
+      # Debug Docker Image Tags
       - name: Debug Docker Image Tags
-        if: ${{ matrix.step == 'docker-build-push' }}
         run: |
-          echo "🐳 DockerHub Repo: ${{ inputs.dockerhub_repo }}"
-          echo "🏷️ Docker Image Tag: ${{ env.docker_tag }}"
-          echo "📝 Full Image Name: ${{ inputs.dockerhub_repo }}:${{ env.docker_tag }}"
-
-      # ✅ Build and Push Docker Image
-      - name: Build and Push Docker Image
-        if: ${{ matrix.step == 'docker-build-push' }}
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          file: ${{ inputs.dockerfile }}
-          push: true
-          tags: |
-            ${{ inputs.dockerhub_repo }}:${{ env.docker_tag }}
-            ${{ inputs.dockerhub_repo }}:latest
-          labels: "built-by=github-actions"
+          echo ""
